tests/ui/type/type-parameter-names.stderr
error[E0308]: mismatched types
  --> $DIR/type-parameter-names.rs:7:5
   |
LL | fn foo<Foo, Bar>(x: Foo) -> Bar {
   |        ---  ---             --- expected `Bar` because of return type
   |        |    |
   |        |    expected type parameter
   |        found type parameter
LL |     x
   |     ^ expected type parameter `Bar`, found type parameter `Foo`
   |
   = note: expected type parameter `Bar`
              found type parameter `Foo`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
   = note: the caller chooses a type for `Bar` which can be different from `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
